--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "10.8.1",
     "com.unity.xr.interaction.toolkit": "2.0.0-pre.7",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.oculus": "1.11.2",
